# meta-hackthon

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  cloud_env.py  implementation_plan.md  implementation_plan.md 1.resolved  implementation_plan.md.resolved  inference.py  models.py  openenv.yaml  pyproject.toml  q_agent.py  requirements.txt  tasks.py
models/: dqn_cloud.pth
server/: app.py  cloud_environment.py  requirements.txt
