[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud-resource-allocation"
version = "1.0.0"
description = "AI agent learns to manage cloud infrastructure resources (CPU, Memory, Containers) under varying load patterns. Simulates real-world Kubernetes autoscaling scenarios."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "tonyaj5759" },
]
keywords = [
    "openenv",
    "reinforcement-learning",
    "cloud-computing",
    "devops",
    "kubernetes",
]

dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn[standard]>=0.23.0,<1.0.0",
    "numpy>=1.24.0,<2.0.0",
    "gradio>=4.0.0,<5.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "openai>=1.0.0,<2.0.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
